[package]
name = "profiles-grabber-api"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
dotenvy = "0.15.7"
thiserror = "2.0.18"

axum = "0.8.9"
axum-extra = { version = "0.12.6", features = ["typed-header"]}
tokio = { version = "1.52.3", features = ["rt-multi-thread", "macros"]}

serde = { version = "1.0.228", features = ["derive"]}
serde_json = "1.0.150"

tower-http = { version = "0.6.11", features = ["trace", "cors"]}

tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"]}

utoipa = "5.5.0"
utoipa-axum = "0.2.0"
utoipa-swagger-ui = { version = "9.0.2", features = ["axum"]}
reqwest = { version = "0.13.3", features = ["json"]}
serde_with = "3.20.0"

